# crskit

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  Readme.md  pyproject.toml  vcpkg.json
.github/workflows/: ci.yml  epsg.yml  wheels.yml
cmake/: crskit-config.cmake.in
crskit/: CoordinateTransformationOptions.h  CrsContext.h  CrsKit.h  CrsKitExport.h  EsriProjectionEngine.cpp  EsriProjectionEngine.h  ExtensionManager.cpp  ExtensionManager.h  Factory.h  GridFileNotFoundException.h  IAuthorityProvider.h  IUtilities.h  OpenGisAttributes.h  OpenGisException.h  Parameter.h  SqliteProvider.h  StringUtil.h  TokenWkt.cpp  TokenWkt.h  Utilities.cpp  Utilities.h  WktDeserializer.cpp  WktDeserializer.h  pch.cpp  pch.h
crskit/CoordinateSystems/: AngularUnit.cpp  AngularUnit.h  AxisInfo.h  AxisOrientationEnum.h  BaseInfo.h  CompoundCoordinateSystem.cpp  CompoundCoordinateSystem.h  CoordinateSystem.cpp  CoordinateSystem.h  CoordinateSystemAuthorityFactory.cpp  CoordinateSystemAuthorityFactory.h  CoordinateSystemEquivalence.cpp  CoordinateSystemFactory.cpp  CoordinateSystemFactory.h  Datum.cpp  Datum.h  DatumType.h  Ellipsoid.cpp  Ellipsoid.h  GeocentricCoordinateSystem.cpp  GeocentricCoordinateSystem.h  GeographicCoordinateSystem.cpp  GeographicCoordinateSystem.h  HorizontalCoordinateSystem.cpp  HorizontalCoordinateSystem.h  HorizontalDatum.cpp  HorizontalDatum.h  ICompoundCoordinateSystem.h  ICoordinateSystem.h  ICoordinateSystemAuthorityFactory.h  IDatum.h  IGeocentricCoordinateSystem.h  IGeographicCoordinateSystem.h  IHorizontalCoordinateSystem.h  IHorizontalDatum.h  IInfo.h  ILocalCoordinateSystem.h  ILocalDatum.h  IProjectedCoordinateSystem.h  IProjection.h  (+22 more)
crskit/CoordinateTransformations/: ConcatenatedTransform.cpp  ConcatenatedTransform.h  CoordinateOperation.h  CoordinateTransformation.cpp  CoordinateTransformation.h  CoordinateTransformationAuthorityFactory.cpp  CoordinateTransformationAuthorityFactory.h  CoordinateTransformationFactory.cpp  CoordinateTransformationFactory.h  DomainFlags.h  ICoordinateTransformation.h  ICoordinateTransformationAuthorityFactory.h  ICoordinateTransformationFactory.h  IMathTransform.h  IMathTransformFactory.h  MathTransformBase.cpp  MathTransformBase.h  MathTransformFactory.cpp  MathTransformFactory.h  MathTransformRegistry.cpp  MathTransformRegistry.h  Passthrough.cpp  Passthrough.h  TransformType.h  UnitsOfMeasure.h
crskit/CoordinateTransformations/Algorithms/: Affine.cpp  Afine.h  AlbersConicEqualArea.cpp  AlbersConicEqualArea.h  AmericanPolyconic.cpp  AmericanPolyconic.h  CassiniSoldner.cpp  CassiniSoldner.h  CoordinateFrameRotation.cpp  CoordinateFrameRotation.h  GeocentricToTopocentric.cpp  GeocentricToTopocentric.h  GeocentricTranslations.cpp  GeocentricTranslations.h  Geographic2D2Geocentric.cpp  Geographic2D2Geocentric.h  Geographic2D2Geographic3D.cpp  Geographic2D2Geographic3D.h  Geographic3DToGravityRelatedHeightEGM.cpp  Geographic3DToGravityRelatedHeightEGM.h  Geographic3DToGravityRelatedHeightEGM2008.cpp  Geographic3DToGravityRelatedHeightEGM2008.h  HotineObliqueMercator.cpp  HotineObliqueMercator.h  LambertAzimuthalEqualArea.cpp  LambertAzimuthalEqualArea.h  LambertConformalConic1SP.cpp  LambertConformalConic1SP.h  LambertConformalConic2SP.cpp  LambertConformalConic2SP.h  LongitudeRotation.cpp  LongitudeRotation.h  MapProjectionBase.cpp  MapProjectionBase.h  Mercator1Sp.cpp  Mercator1Sp.h  Mercator2Sp.cpp  Mercator2Sp.h  MolodenskyBadekas.cpp  MolodenskyBadekas.h  (+20 more)
crskit/CoordinateTransformations/Algorithms/GridFiles/: GridAusGeoid.cpp  GridAusGeoid.h  GridEGM2008.cpp  GridEGM2008.h  GridEGM2008Rednap.cpp  GridEGM2008Rednap.h  GridGtg.cpp  GridGtg.h  GridGtx.cpp  GridGtx.h  Inflate.cpp  Inflate.h
crskit/Mathematics/: Angles.h  Concepts.h  GridCell.h  GridInterpolation.h  Interpolation.h  Matrix.h  Point.h  Window2D.h
crskit/Positioning/: Envelope.h
data/: grid-sources.json
docs/: vcpkg-tutorial.md
ports/crskit/: portfile.cmake  vcpkg.json
python/: CMakeLists.txt  README.md  TUTORIAL.de.md  TUTORIAL.es.md  TUTORIAL.fr.md  TUTORIAL.it.md  TUTORIAL.md
python-epsg/: README.md  fetch.py  pyproject.toml
python-epsg/crskit_epsg/: EPSG-TERMS-OF-USE.md  __init__.py
python/crskit/: __init__.py  _crskit.pyi
python/examples/: 01_quickstart.py  02_wkt.py  03_point_cloud.py  04_choosing_the_operation.py  05_orthometric_heights.py  06_global_geoid.py  README.md  _setup.py
python/src/: module.cpp
python/tests/: test_crskit.py  test_examples.py
tests/: GigsFactory.h  Test5101Part1.cpp  TestBase.h  TestContextEnvironment.cpp  TestEnvironment.cpp  TestEquivalence.cpp  TestExceptions.cpp  TestGridCell.cpp  TestGridFile.cpp  TestOperationSelection.cpp  TestProjectionEdges.cpp  TestTowgs84.cpp  TestTransformPoints.cpp  TestTransformationAuthorityCode.cpp  TestUnknownCrs.cpp  TestWkt2.cpp  vcpkg.json
tests/Gigs/: Test5101Part2.cpp  Test5101Part3.cpp  Test5101Part4.cpp  Test5102Part1.cpp  Test5102Part2.cpp  Test5103Part1.cpp  Test5103Part2.cpp  Test5103Part3.cpp  Test5104Part1.cpp  Test5105Part1.cpp  Test5105Part2.cpp  Test5106Part1.cpp  Test5107Part1.cpp  Test5108Part1.cpp  Test5109Part1.cpp  Test5110Part1.cpp  Test5111Part1.cpp  Test5111Part2.cpp  Test5112Part1.cpp  Test5113Part1.cpp  Test5201Part1.cpp  Test5203Part1.cpp  Test5204Part1.cpp  Test5205Part1.cpp  Test5205Part2.cpp  Test5207Part1.cpp  Test5207Part2.cpp  Test5208Part1.cpp  Test5209Part1.cpp  Test5210Part1.cpp  Test5210Part10.cpp  Test5210Part11.cpp  Test5210Part12.cpp  Test5210Part2.cpp  Test5210Part3.cpp  Test5210Part4.cpp  Test5210Part5.cpp  Test5210Part6.cpp  Test5210Part7.cpp  Test5210Part8.cpp  (+3 more)
tools/: release.sh
tools/epsg-sqlite/: README.md  epsg_sql_to_sqlite.py
versions/: baseline.json
versions/c-/: crskit.json
