[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.13"]
build-backend = "scikit_build_core.build"

[project]
name = "crskit"
version = "0.4.1"
description = "Coordinate reference systems and coordinate transformations (OGC Coordinate Transformation Services, EPSG, WKT 1 and WKT 2)"
# The Python-facing page, which is what PyPI renders. The Readme.md at the root is the C++ project's
# front page (vcpkg, CMake, the GIGS suite) and would be the wrong thing to greet a pip user with.
readme = "python/README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "José Ángel Martínez Torres", email = "joseangelmt@outlook.com" }]
keywords = ["EPSG", "CRS", "WKT", "coordinate", "transformation", "projection", "geodesy", "GIS"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: GIS",
]

# crskit-epsg carries the EPSG catalogue (IOGP's data, under its own terms), which init() then finds
# on its own. Kept an extra rather than a hard dependency until it is published to PyPI.
# NumPy is only needed by Transformation.transform_points(); transform() works with plain sequences,
# so the module itself imports without it.
[project.optional-dependencies]
epsg = ["crskit-epsg"]
numpy = ["numpy>=1.23"]

[project.urls]
Homepage = "https://github.com/digi21/crskit"
Repository = "https://github.com/digi21/crskit"

[tool.scikit-build]
minimum-version = "0.10"
build-dir = "build/{wheel_tag}"
wheel.packages = ["python/crskit"]
# The module and the shared library it links: both ship inside the package. The GoogleTest suite
# plays no part in the wheel, and neither do the CMake package/export files (DIGI21_INSTALL=OFF).
build.targets = ["_crskit", "crskit"]
cmake.version = ">=3.21"
cmake.define = { DIGI21_BUILD_PYTHON = "ON", DIGI21_BUILD_TESTS = "OFF", DIGI21_INSTALL = "OFF" }

[tool.pytest.ini_options]
testpaths = ["python/tests"]
